# NASSP

./: .gitignore
Config/ProjectApollo/: LEMSystems.cfg  Moon.cfg  SaturnSystems.cfg
Config/ProjectApollo/Panel/LM/: default.toml
Doc/Project Apollo - NASSP/Checklists/: Apollo 9 LM Checklists.xls
Doc/Project Apollo - NASSP/Checklists/Apollo 10 CSM/: Activate Cabin Cold Soak.tsv  Activate Primary Evaporator.tsv  Activate Secondary Evaporator.tsv  Backup Crew Prelaunch Checklist.tsv  C&WS Operational Check.tsv  CM RCS Monitoring Check.tsv  CM-SM-Separation.tsv  CMC Power Up.tsv  CMC Self Check.tsv  CMC Standby.tsv  CSM Active Docking.tsv  CSM-LV-Separation.tsv  Cabin Depress.tsv  DAP Deadband Change (DB 10).tsv  DAP Orbital Rate.tsv  DSKY Condition Lights Test.tsv  Deactivate Primary Evaporator.tsv  Deactivate Secondary Evaporator.tsv  ECS Monitoring Check.tsv  ECS Redundant Component Check.tsv  EPS Monitoring Check.tsv  Entry.tsv  Flightplan.tsv  Fuel Cell H2 Purging.tsv  Fuel Cell O2 Purging.tsv  GDC Alignment to IMU.tsv  GROUPS.tsv  IMU Power Down.tsv  IMU Power Up.tsv  Insertion Checklist.tsv  LGC Clock Sync & TEPHEM Update.tsv  LM Ejection.tsv  LM Jettison.tsv  LM Pressure EQ dP over 2.4.tsv  LM Pressure EQ dP under 2.4.tsv  LOI-1.tsv  LOI-2.tsv  Launch Checklist.tsv  MCC-1 Scrubbed.tsv  MCC-1.tsv  (+58 more)
Doc/Project Apollo - NASSP/Checklists/Apollo 10 LM/: AGS Activation & Self Test.tsv  AGS Calibration.tsv  AGS DPS External dV.tsv  AGS Initialization.tsv  APS Burn To Depletion.tsv  APS Pressurization.tsv  ARS PGA Press Integrity Check.tsv  Ascent Battery Activation.tsv  CB Activation Pwr Up Chart.tsv  CB Post Docking Chart.tsv  CB Undocking Chart.tsv  CDH.tsv  CDR IVT To CSM.tsv  CDR To LM ECS.tsv  CSI.tsv  CSM Active Docking.tsv  Caution Warning Checkout.tsv  Comm Activation.tsv  Comm Deactivation.tsv  DAP Set, Gimbal Throttle Test.tsv  DOI.tsv  DPS Pressurization.tsv  Deactivation.tsv  Deploy Landing Gear.tsv  Docked IMU Coarse Align.tsv  Docked IMU Fine Align.tsv  ECS Activation.tsv  EPS Activation.tsv  Final Deactivation.tsv  Flightplan.tsv  GROUPS.tsv  Glycol Pump Activation.tsv  Glycol Pump Check.tsv  Initial CB Positions Chart.tsv  Initial Power Down.tsv  Initial Switch Positions.tsv  Insertion.tsv  LDG RDR Self Test (Full).tsv  LDG RDR Self Test.tsv  LGC Clock Sync & TEPHEM Update.tsv  (+49 more)
Doc/Project Apollo - NASSP/Checklists/Apollo 7 CSM/: Activate Cabin Cold Soak.tsv  Activate Secondary Evaporator.tsv  Attitude Hold Test.tsv  Backup Crew Prelaunch Checklist.tsv  Battery Charge A.tsv  Battery Charge B.tsv  Battery Charge C.tsv  Begin Radiator Degradation Test.tsv  Begin SPS Thermal Control Test.tsv  CM RCS Monitoring Check.tsv  CM-SM-Separation.tsv  CMC Power Up.tsv  CMC Standby.tsv  CSM-LV-Separation.tsv  DAP Data Load.tsv  Deactivate Primary Evaporator.tsv  Deorbit Preparations.tsv  ECS Monitoring Check.tsv  ECS Redundant Component Check.tsv  EMS Bias Test.tsv  EMS DV Test.tsv  EPS Monitoring Check.tsv  End Radiator Degradation Test.tsv  End SPS Thermal Control Test.tsv  End Secondary Coolant Loop Test.tsv  Flightplan.tsv  Fuel Cell H2 Purging.tsv  Fuel Cell O2 Purging.tsv  G&N Power Down.tsv  G&N Power Up.tsv  GROUPS.tsv  H2 Stratification Test.tsv  IMU Power Down.tsv  Inverter Changeover.tsv  Launch Checklist.tsv  Manual SIVB Attitude Control.tsv  NCC2.tsv  (+39 more)
Orbitersdk/samples/ProjectApollo/: CMakeLists.txt  CMakeSettings.json  Doxyfile  MiniDoxyFile  ProjectApollo.sln  ProjectApollo2017.sln
Orbitersdk/samples/ProjectApollo/Project/LM_New/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/PanelSDK/: CMakeLists.txt
Orbitersdk/samples/ProjectApollo/Project/SystemSDK/: CMakeLists.txt
Scenarios/Project Apollo - NASSP/WIP Scenarios/: Apollo 12 - Launch.scn
Source/: CMakeLists.txt
Source/src_csm/: csmrcs.cpp  saturn.cpp
Source/src_saturn/: s1csystems.cpp  sivbsystems.cpp
Textures/ProjectApollo/Panel2D/: FDAI.dds  FDAIRoll.dds  FDAI_needles.dds  FDAI_off_flag.dds  lem_aot_panel_wide.dds  lem_cw_lights.dds  lem_forward_hatch.dds  lem_upper_hatch.dds
(+384 files in other folders)
